experimenting with raw

--- a/vonLaszewski-{{cookiecutter.label}}/vonLaszewski-{{cookiecutter.label}}.tex
+++ b/vonLaszewski-{{cookiecutter.label}}/vonLaszewski-{{cookiecutter.label}}.tex
@@ -72,6 +72,8 @@ Gregor von Laszewski\titlenote{Corresponding author.}\\
        \affaddr{Bloomington IN 47408, U.S.A.}\\ 
 }
 
+{% raw %}
+
 \date{27 April 2014}
 
 \maketitle
@@ -157,3 +159,5 @@ bib/cyberaide-metric}
 
 \balancecolumns 
 \end{document}
+
+{% endraw %}
