--- a/vonLaszewski-{{cookiecutter.label}}/vonLaszewski-{{cookiecutter.label}}.tex
+++ b/vonLaszewski-{{cookiecutter.label}}/vonLaszewski-{{cookiecutter.label}}.tex
@@ -97,6 +97,8 @@ TBD
 
 TBD
 
+Test citations \cite{las2010gce,las12fg-bookchapter}.
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 \section{Requirements}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
